fixed page shift

--- a/src/index.css
+++ b/src/index.css
@@ -8,6 +8,7 @@ body {
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
   background-color: #fdf7f2;
+  overflow: overlay;
 }
 
 code {
@@ -75,21 +76,15 @@ img {
   border-radius: 10px;
   color: #111111;
 }
-/* .hidscroll::-webkit-scrollbar {
-  display: none;
-} */
 
-::-webkit-scrollbar {
-  position: fixed;
-  /* chrome based */
-  width: 10px;
-  /* ширина scrollbar'a */
+
+body::-webkit-scrollbar {
+  width: 7px;
   background: transparent;
-  /* опционально */
+  
 }
 ::-webkit-scrollbar-thumb {
   background-color: #f1b28b;
- 
   border-radius: 10px;
 }
 
